--- a/page4.html
+++ b/page4.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content5 cid-r6QfwbDyCS" id="content5-49">
+<section class="engine"><a href="https://mobirise.info/d">free site maker</a></section><section class="mbr-section content5 cid-r6QfwbDyCS" id="content5-49">
 
     
 
@@ -121,7 +121,7 @@
                     <div class="card_back card_cont">
                         <h4 class="card-title display-5 py-2 mbr-fonts-style">
                             Automobile<br>Insurance</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Every driver is different. Every vehicle is different. Every type of insurance situation is different. Let Barrett Insurance find the greatest coverage to protect you, your vehicles, and your situation.&nbsp;</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Every driver is different. Every vehicle is different. Every type of insurance situation is different. Let Barrett Insurance find the best coverage to protect you, your vehicles and your situation.&nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -147,8 +147,8 @@
                         <img src="assets/images/new-project6-328x299.png" alt="Mobirise" title="">
                     </div>
                     <div class="card_back card_cont">
-                        <h4 class="card-title py-2 mbr-fonts-style display-5">"Toys"<br>Insurance</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">We work with standard and specialty underwriters to protect everything from jet skis to gators, motorcycles to sports bikes, four-wheelers, fifth wheels, and everything in between.
+                        <h4 class="card-title py-2 mbr-fonts-style display-5">Toys<br>Insurance</h4>
+                        <p class="mbr-text mbr-fonts-style display-7">We work with standard and specialty underwriters to protect everything from jet skis to boats, dirt bikes to motorcycles, pop-ups to motorhomes and everything <br>in between.
                         </p>
                     </div>
                 </div> 
@@ -249,7 +249,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><strong>Barrett Insurance is a local, independent insurance agency. We utilize a vast network of companies that are well-known in the industry for their particular products. Our insurance experts shop around to find affordable coverage that fits your needs.</strong></div>
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><strong>Barrett Insurance is a local, independent insurance agency. We utilize a vast network of companies that are well known in the industry for their particular products. Our insurance experts shop around to find affordable coverage that fits your needs.</strong></div>
         </div>
     </div>
 </section>
