--- a/page8.html
+++ b/page8.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop free website</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -280,13 +280,17 @@
                             </div>
                             <div id="collapse1_78" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_78">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text display-7">I approach the world with a giving attitude that has served me well since entering the insurance world in 1997. I continue to add to my 20 years of experience by developing quality health, life, and disability programs for companies and individuals. I also expand out to cover business exposures. 
+                                    <p class="mbr-fonts-style panel-text display-7">Hi. I’m Tracey. I was born in Garden City, Michigan -but was raised in Biloxi, Mississippi. The lesson in “southern hospitality” has shaped who I am and everything that I stand for. We were taught to respect our elders, to put your best foot forward, and to be kind and caring to the people who influence your life.
 <br>
-<br>I am a local boy. I graduated from Jonesville High School and obtained a Business degree in college. I have a broad range of business experience from retail to mechanical. 
+<br>I graduated from Hudson High school. I attended Jackson Business College to earn a diploma in Office Accounting. I have a Bachelor of Arts degree in Management and Human Resources from Spring Arbor University.
 <br>
-<br>I am active in the Knights of Columbus and Jonesville Rotary as well as on the board of the Jonesville Downtown Development Authority. 
+<br>I have 8 years of retail management experience and 26 years in the insurance industry.
 <br>
-<br>This year, I celebrate 12 years with Barrett Insurance. I am currently enjoying grand kids and my mid-life crisis.&nbsp;</p>
+<br>I married my husband Jim 22 years ago. We have 4 grown children, 3 wonderful grand “boys” and beautiful grand-baby Lexi. &nbsp;We enjoy spending time together in the great outdoors…gardening, fishing, hunting, target shooting, and playing with our 2 dogs.
+<br>
+<br>In 2010, I received the horrible news that I had breast cancer. I AM A SURVIVOR!
+<br>
+<br>I came to Barrett Insurance in 2008 with the belief that insurance is more than just a job. It’s about building long-term relationships and helping people. Bad things happen to good people. Insurance is about making you whole again. Barrett Insurance is not just any agency. My coworkers genuinely care about making a difference. Our work is about “Protecting your dreams”- and I’d like to help.</p>
                                 </div>
                             </div>
                         </div>
@@ -397,7 +401,7 @@
         <div class="media-container-row pt-5">
             <div class="accordion-content">
                 
-                <h3 class="mbr-section-subtitle pt-2 align-center mbr-light mbr-fonts-style display-7"><strong>Rebecca "Becky" Blair<br></strong>Licensed Agent&nbsp;
+                <h3 class="mbr-section-subtitle pt-2 align-center mbr-light mbr-fonts-style display-7"><strong>Becky Blair<br></strong>Licensed Agent&nbsp;
 Specializing in Home &amp; Auto Insurance</h3>
                 <div id="bootstrap-accordion_80" class="panel-group accordionStyles accordion pt-5 mt-3" role="tablist" aria-multiselectable="true">
                         <div class="card">
