--- a/page8.html
+++ b/page8.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -412,7 +412,7 @@ Specializing in Home &amp; Auto Insurance</h3>
                             </div>
                             <div id="collapse1_80" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_80">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text display-7">Hi, my name is Rebecca Blair (Becky). I was born in Sturgis but I grew up in Hillsdale before moving for a number of years to Florida. I have 18 years of experience in the insurance industry. My favorite part of working in insurance is helping the client see what they need to protect their dreams. A lot of us underestimate the value of those things we should protect. I’m excited to join the Barrett Insurance team because I am dedicated to making sure my clients are taken care of and that requires we talk about it. I joined Barrett Insurance, April, 2016. My husband and I have 4 kids, 9 grandchildren, dogs, cats, granddogs, and grandcats. In my free time, I enjoy riding my motorcycle, NASCAR (Jimmie Johnson #48!), reading, swimming, and camping. I am a member of ABATE of Michigan, St. Jude’s Children’s Hospital Charity Committee, and I served as former chaplain for the Fraternal Order of Eagles.</p>
+                                    <p class="mbr-fonts-style panel-text display-7">Hi, my name is Becky Blair. I was born in Sturgis but I grew up in Hillsdale. I joined Barrett Insurance in April of 2016. I have 18 years of experience in the insurance industry. My favorite part of working in insurance is helping the client to see what they need to protect their dreams.<br><br>My husband and I have 4 kids, 13 grandchildren, dogs, granddogs, and grandcats. In my free time, I enjoy kayaking, NASCAR (Jimmie Johnson #48), reading, swimming, and camping. I have served as an officer in ABATE of Michigan, been on the Hospital Chair Comittee for St. Jude’s Children’s Hospital, I am a member of the Fraternal Order of Eagles and have also served as a chaplain.</p>
                                 </div>
                             </div>
                         </div>
