--- a/page10.html
+++ b/page10.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -119,7 +119,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cbBE0YUhV4cBpcCaWggl0f8IQhiRj5xOLwgZ7LhrJ/sWcelvU1+lD8+xCyFxOgrQYel8iEzb4iTWYxz2BDMl7Napvbvztt2vrrho4WgLd+u9VFDyUgRP3Xt+H/Inev5I">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="o2IclMpRExddwo/SzeNpOvGSJo/tv3bE6M2IYVw/+UdBNZnEWtWvrNXd+K3g91Pv3isGQsx3PVDoY2re2LP2fMwmrDmMj/RzYQ5lbq0vZLLpzIMhhWy2toyHQjXDpX8C">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
