--- a/page8.html
+++ b/page8.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -280,7 +280,7 @@
                             </div>
                             <div id="collapse1_78" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_78">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text display-7">Hi. I’m Tracey. I was born in Garden City, Michigan -but was raised in Biloxi, Mississippi. The lesson in “southern hospitality” has shaped who I am and everything that I stand for. We were taught to respect our elders, to put your best foot forward, and to be kind and caring to the people who influence your life.
+                                    <p class="mbr-fonts-style panel-text display-7">Hi, I’m Tracey. I was born in Garden City, Michigan, but was raised in Biloxi, Mississippi. The lesson in “southern hospitality” has shaped who I am and everything that I stand for. We were taught to respect our elders, to put your best foot forward, and to be kind and caring to the people who influence your life.
 <br>
 <br>I graduated from Hudson High school. I attended Jackson Business College to earn a diploma in Office Accounting. I have a Bachelor of Arts degree in Management and Human Resources from Spring Arbor University.
 <br>
