--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/f">simple web maker</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5nLTTxI0yZbLs1672uySwf1GTmbTt1wqysrwFvYpz6Cce5VZXAA4dt3H+/MMdGj8QAceKiSDxN8KaMaLK13v9yY0vvHvEG5lIEx+F2SG2HluFMw6fUZxtSEZ0GET6weB">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="2NIZ+qgrY/mtHMqx0nhlwCQzH0SHkNlKBw3zr1HP8Td+6HaWwGf4v5MwSvjE151RMAKaAqkcAD77TG8gcoMmElZQBy/PZmEGa+vkMQfDjQH8tjlZZNKJA8yYkLBOWF1D">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
