create github pages

--- a/page8.html
+++ b/page8.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -143,8 +143,8 @@
     <div class="container">
         <div class="media-container-row pt-5">
             <div class="accordion-content">
-                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5"><strong>
-                        Cyndi Barrett<br></strong></h2>
+                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5">
+                        Cyndi Barrett<br></h2>
                 <h3 class="mbr-section-subtitle pt-2 align-center mbr-light mbr-fonts-style display-7">Owner<br></h3>
                 <div id="bootstrap-accordion_76" class="panel-group accordionStyles accordion pt-5 mt-3" role="tablist" aria-multiselectable="true">
                         <div class="card">
@@ -204,7 +204,7 @@
     <div class="container">
         <div class="media-container-row pt-5">
             <div class="accordion-content">
-                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5"><font color="#000000"><strong>Joe Ruden</strong></font></h2>
+                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5"><font color="#000000">Joe Ruden</font></h2>
                 <h3 class="mbr-section-subtitle pt-2 align-center mbr-light mbr-fonts-style display-7">Licensed Agent
  Specializing in Life &amp; Health Insurance</h3>
                 <div id="bootstrap-accordion_77" class="panel-group accordionStyles accordion pt-5 mt-3" role="tablist" aria-multiselectable="true">
@@ -269,7 +269,7 @@
     <div class="container">
         <div class="media-container-row pt-5">
             <div class="accordion-content">
-                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5"><strong>Tracey Moore</strong></h2>
+                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5">Tracey Moore</h2>
                 <h3 class="mbr-section-subtitle pt-2 align-center mbr-light mbr-fonts-style display-7"><div>Licensed Agent Specializing in Home, Auto &amp; Commercial Insurance</div></h3>
                 <div id="bootstrap-accordion_78" class="panel-group accordionStyles accordion pt-5 mt-3" role="tablist" aria-multiselectable="true">
                         <div class="card">
@@ -336,7 +336,7 @@
     <div class="container">
         <div class="media-container-row pt-5">
             <div class="accordion-content">
-                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5"><strong>Ben Judsen</strong></h2>
+                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5">Ben Judsen</h2>
                 <h3 class="mbr-section-subtitle pt-2 align-center mbr-light mbr-fonts-style display-7">Licensed Agent
  Specializing in Life &amp; Health Insurance<br></h3>
                 <div id="bootstrap-accordion_79" class="panel-group accordionStyles accordion pt-5 mt-3" role="tablist" aria-multiselectable="true">
@@ -400,7 +400,7 @@
     <div class="container">
         <div class="media-container-row pt-5">
             <div class="accordion-content">
-                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5"><strong>Becky Blair</strong></h2>
+                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5">Becky Blair</h2>
                 <h3 class="mbr-section-subtitle pt-2 align-center mbr-light mbr-fonts-style display-7">Licensed Agent&nbsp;
 Specializing in Home &amp; Auto Insurance</h3>
                 <div id="bootstrap-accordion_80" class="panel-group accordionStyles accordion pt-5 mt-3" role="tablist" aria-multiselectable="true">
@@ -460,7 +460,7 @@ Specializing in Home &amp; Auto Insurance</h3>
     <div class="container">
         <div class="media-container-row pt-5">
             <div class="accordion-content">
-                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5"><strong>Aaron Akers</strong></h2>
+                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5">Aaron Akers</h2>
                 <h3 class="mbr-section-subtitle pt-2 align-center mbr-light mbr-fonts-style display-7">Licensed Agent
  Specializing in Home, Auto &amp; Commercial Insurance</h3>
                 <div id="bootstrap-accordion_81" class="panel-group accordionStyles accordion pt-5 mt-3" role="tablist" aria-multiselectable="true">
@@ -524,7 +524,7 @@ Specializing in Home &amp; Auto Insurance</h3>
     <div class="container">
         <div class="media-container-row pt-5">
             <div class="accordion-content">
-                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5"><strong>Martha Stuck</strong></h2>
+                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5">Martha Stuck</h2>
                 <h3 class="mbr-section-subtitle pt-2 align-center mbr-light mbr-fonts-style display-7">Licensed Agent 
 Specializing in Home &amp; Auto Insurance<br></h3>
                 <div id="bootstrap-accordion_82" class="panel-group accordionStyles accordion pt-5 mt-3" role="tablist" aria-multiselectable="true">
@@ -590,7 +590,7 @@ Specializing in Home &amp; Auto Insurance<br></h3>
     <div class="container">
         <div class="media-container-row pt-5">
             <div class="accordion-content">
-                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5"><strong>Doug Jones</strong></h2>
+                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5">Doug Jones</h2>
                 <h3 class="mbr-section-subtitle pt-2 align-center mbr-light mbr-fonts-style display-7">Marketing Director</h3>
                 <div id="bootstrap-accordion_83" class="panel-group accordionStyles accordion pt-5 mt-3" role="tablist" aria-multiselectable="true">
                         <div class="card">
@@ -653,7 +653,7 @@ Specializing in Home &amp; Auto Insurance<br></h3>
     <div class="container">
         <div class="media-container-row pt-5">
             <div class="accordion-content">
-                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5"><strong>Frank Swiniarski</strong></h2>
+                <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-5">Frank Swiniarski</h2>
                 <h3 class="mbr-section-subtitle pt-2 align-center mbr-light mbr-fonts-style display-7">Licensed Agent
  Specializing in Commercial Insurance</h3>
                 <div id="bootstrap-accordion_84" class="panel-group accordionStyles accordion pt-5 mt-3" role="tablist" aria-multiselectable="true">
