--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rtqVyb98kAY+K05aLIOb3r5a7f9VIMIXnH0vOzHHtIIhetDQN+1gSuA/xqnLZ3z+70Khakn3EOhhlaF2Uv8jlpSBWkXWfTnq9s7cDNQHXKFRGvXb+6F/buZw1tzN/F8s">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bnoieuDuOqpDeemBZDerUyR1OkBHXXRsN4zKmAGGe/tW1nlSkh92+Brhdu8Kc0CCefL4LVvB/lhtdpP+/fwgwgBOjCdvNs2f9DFTCn/iXA/ODhJ/oPuk+JMLYAotTw7g">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
