create github pages

--- a/page9.html
+++ b/page9.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/y">html site templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -119,7 +119,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hmf0bc4MzZBPglcP8RvC37sbarOm2ZzaQMC1NjVSGeNEINNc+TAFYmoXO+Dkbb6l8HSheGTfXvd2gurQ8nU+Kne7WHdqg0A73heMLFlvtG/gbUGgivlaAl7oejB4hXFH">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UT4CFo2iTyosswcduGu0r3suDrVOOQhGPcvD8w4untMlSA8MEjhxnTPDd/a33H3CJoer9ThvjPJ+T5UVpPoPO9MnDSjHAjudsdnLUycY0o80hTuP2HeYWJXyplcXfQzK">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
