create github pages

--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1/C18S5OQI+jfwxM6quoA1QpGjuByW1La+DYzzf2nzrT2mHXYx4o1udHKNKfIyI6Ei1fZfy0HjDpUlCZcDidmB6qq0X4uXV5AP8KTXwf3CEbYby1j1qAvlkkd1bWoPxx">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qTFGEy9hFExyRJH4GaA76k+JqhpX43WKkzwU+/b152mXY0fKG/vVndyP13yNZv9bRZaJSKAu1bo0ypH36JStze942roahzOA5yfaYgKZizjW6wNMNklkMFOBewkgORMP">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
