create github pages

--- a/page10.html
+++ b/page10.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -110,7 +110,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/690d5c60d100dbdf4292a37e49c3b76f-220x147.jpg" alt="Mobirise" title="">  
+                      <img src="assets/images/-dsc0138-436x291.png" alt="Mobirise" title="">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xJC23J0Y0/SQZzoFDQr3syFikl8piXNIZ2b1dr+mcPY+J1m0VBAqc8kAfH9vJhHeur2/dJ77k+QuZXaZhfBV4vBSZkB7H3ZvbaOQA+SJL0BnIlC51qZQnoYN/TMBYheL">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Zq4z5+ugnWRTK0pT5n6+vDK+veRtYNW0rUsDj92n/9XRMkkWneHWJi+0HGRh4LcfChJ1MFFKSVveOgQb1cjk8pkh7m4880B0c+I8MZ2d/qiIUS6uJtDSYd+nJF6dgDoh">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
