--- a/page8.html
+++ b/page8.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -189,7 +189,7 @@
                 </div>
             </div>
             <div class="mbr-figure" style="width: 56%;">
-                    <img src="assets/images/690d5c60d100dbdf4292a37e49c3b76f-220x147.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/-dsc0138-700x467.png" alt="Mobirise" title="">
             </div>
         </div>
     </div>
@@ -320,7 +320,7 @@
                 </div>
             </div>
             <div class="mbr-figure" style="width: 56%;">
-                    <img src="assets/images/84562658bd612d1f7e077f52e0afaf4a-220x147.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/-dsc0125-700x467.png" alt="Mobirise" title="">
             </div>
         </div>
     </div>
@@ -444,7 +444,7 @@ Specializing in Home &amp; Auto Insurance</h3>
                 </div>
             </div>
             <div class="mbr-figure" style="width: 55%;">
-                    <img src="assets/images/b602f6a98cd4527ebbd9dc9264a19292-220x147.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/-dsc0118-690x460.png" alt="Mobirise" title="">
             </div>
         </div>
     </div>
@@ -508,7 +508,7 @@ Specializing in Home &amp; Auto Insurance</h3>
                 </div>
             </div>
             <div class="mbr-figure" style="width: 56%;">
-                    <img src="assets/images/1012180921c-hdr1-220x147.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/-dsc01561-700x467.png" alt="Mobirise" title="">
             </div>
         </div>
     </div>
@@ -574,7 +574,7 @@ Specializing in Home &amp; Auto Insurance<br></h3>
                 </div>
             </div>
             <div class="mbr-figure" style="width: 56%;">
-                    <img src="assets/images/b699ed581f24c5b8c212820e742b7f98-220x147.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/-dsc0115-700x467.png" alt="Mobirise" title="">
             </div>
         </div>
     </div>
