--- a/page13.html
+++ b/page13.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a site for free</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content5 cid-r6Qg4II7iO" id="content5-4p">
 
     
 
@@ -110,7 +110,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/b602f6a98cd4527ebbd9dc9264a19292-220x147.jpg" alt="Mobirise" title="">  
+                      <img src="assets/images/-dsc0118-436x291.png" alt="Mobirise" title="">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LQn51KSKk8K/For8mSfvUQQXDl9PMXqxW32WKS32iueAJ+76V/TCNcdkQFNKM24O91u1gMfUUjVmHZjjSmnwL9qMWGz/F3NDmdC9xkZr0vDjZW9um21PSXtCblQ6Z2U+">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZTlvAL47gHKw4ESfQ0hhwoLFWmEv87Gt8/J5doQ/7llVtulVpyTcyb0oZFkFrJdzMWBaN/ILYlfEwJuEM7ExaFfn/gxs5uGgL4l8J9jG8iHn17Hh9jWemTzCQQgdLVQd">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
