--- a/page14.html
+++ b/page14.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="mbr-section content5 cid-r6Qg8n0nlW" id="content5-4r">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-r6Qg8n0nlW" id="content5-4r">
 
     
 
@@ -110,7 +110,7 @@
             <div class="col-12 col-md-8">
                 <div class="media-container-row">
                     <div class="mbr-figure" style="width: 60%;">
-                      <img src="assets/images/1012180921c-hdr1-220x147.jpg" alt="Mobirise" title="">  
+                      <img src="assets/images/-dsc01561-436x291.png" alt="Mobirise" title="">  
                     </div>
                     <div class="media-content">
                         <div class="mbr-section-text">
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zIm3pZuhDhDD3U3ellwT94+ySPWafxCE6Q1AHDCJ+IUvNsW//yqZsRX5Cj0fQIGxIMz1VODD8FTx2r+W+DqNCTq6ud6GIDpE8UGCzp9RsOJTMYMtm96T4wvyIpU+Vfwq">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="mfIewv8agcasfLJWSznkAgMFZlALTFgdFvCf5eSR0NN56SZhXi4hdSx0+fhVcSiNI5JlesF+7aS6ePw70Avg9Ag4+u6CKuGBukri7K9Nse+dgpaQ/YwIuLI1tx0i2iVx">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
