--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -128,7 +128,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="F4gPf8TSD7GwndvzTdCHHL6+l0YFKwrmUx2fD5aRV239wFiUbdNkguRcjHBe0CDrdW1uRObUNmtyytqaE5mqlx7WuFktOPXInoWQSYA4Cu2jsbehtuK/ho/8iOrh7rAe">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TikCy7ah3FflgAx//HrPKB8YVb/dB9MJe2xFf80j9pcIAMKS9SjVzOBuHCYLRmMW63F1jE630bce1r0nqkWagvyT2yzMPk0WFs9ykPP+WV6oVe9uQl5EaE5IGWOeVChS">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
