--- a/page8.html
+++ b/page8.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -574,7 +574,7 @@ Specializing in Home &amp; Auto Insurance<br></h3>
                 </div>
             </div>
             <div class="mbr-figure" style="width: 56%;">
-                    <img src="assets/images/-dsc0115-700x467.png" alt="Mobirise" title="">
+                    <img src="assets/images/-dsc01601-700x467.png" alt="Mobirise" title="">
             </div>
         </div>
     </div>
