--- a/page8.html
+++ b/page8.html
@@ -67,7 +67,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="mbr-section content5 cid-r6QkFQMK8n" id="content5-53">
 
     
 
@@ -252,7 +252,7 @@
                 </div>
             </div>
             <div class="mbr-figure" style="width: 56%;">
-                    <img src="assets/images/e5c658964eed3e9aa0ba1f208c1855d2-220x147.jpg" alt="Mobirise" title="">
+                    <img src="assets/images/-dsc01831-700x467.png" alt="Mobirise" title="">
             </div>
         </div>
     </div>
@@ -320,7 +320,7 @@
                 </div>
             </div>
             <div class="mbr-figure" style="width: 56%;">
-                    <img src="assets/images/-dsc0125-700x467.png" alt="Mobirise" title="">
+                    <img src="assets/images/-dsc01251-700x467.png" alt="Mobirise" title="">
             </div>
         </div>
     </div>
