--- a/page12.html
+++ b/page12.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section content5 cid-r6Qg1DHjC4" id="content5-4o">
 
     
 
@@ -142,7 +142,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rNREagHkLidMWZlt9WrzdViB6npyGo+HbVr+aNQQo+o+latumhOvDGwLIavScag6w0HucTiUHePiRiHJzxcqIiOa/HTmawGEoDW9ZkiAmLyGs8aT5g1CoCUuCS0DIBc4">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="k3/WOIqxgGNjD3ai8pcwSanKy6rjq+vDZhsR+93yketPx0q/liSVAZmANaMwxjcu7Lm1kpYTc2tLJDTCOH/Zh7053RQGMkN1NJpcxvOE2kf8tS3nevh/98r0dY/yYds2">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
